# silvaengine_gateway

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: gateway_setup.md  websocket_performance_plan.md  websocket_plan.md
silvaengine_gateway/: __init__.py  __main__.py  app.py  config.py  dependencies.py  manifest.py  resolve_info.py  router_builder.py  routes.yaml  setting_builder.py  settings.yaml  utils.py  websocket_manager.py
silvaengine_gateway/auth/: __init__.py  jwt_cognito.py  jwt_local.py  middleware.py  users.py  websocket.py
silvaengine_gateway/middleware/: __init__.py  rate_limit.py
silvaengine_gateway/module_routes/: a2a_daemon_engine.yaml  knowledge_graph_engine.yaml  llm_engine.yaml  setting_core_engine.yaml  setting_engine.yaml
silvaengine_gateway/routes/: __init__.py  ai_agent_core_engine.yaml  ai_coordination_engine.yaml  ai_marketing_engine.yaml  auth.py  client_engine.yaml  health.py  mcp_daemon_engine.yaml  rfq_engine.yaml
silvaengine_gateway/tasks/: __init__.py  backend.py
silvaengine_gateway/tests/: .env.example  __init__.py  call_inquire_catalog.py  call_mcp_graphql.py  call_mcp_rest.py  call_mcp_sse.py  call_search.py  call_websocket.py  chat_websocket.py  conftest.py  deploy_mcp_package.py  export_neo4j_db.py  export_pg_db.py  gen_token.py  import_neo4j_db.py  import_pg_db.py  ping_websocket.py  run_daemon.py  run_hermes_hello.py  test_app.py  test_auth.py  test_backends.py  test_core_engine_chatbot.py  test_core_engine_gateway_live.py  test_core_engine_sse_live.py  test_export_neo4j_db.py  test_export_pg_db.py  test_mcp_e2e.py  (+11 more)
